@@ -425,6 +425,81 @@ argument_list|,
 name|validationResult
 argument_list|)
 expr_stmt|;
+name|checkTypesOfAttributesInRelationship
+argument_list|(
+name|relationship
+argument_list|,
+name|validationResult
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+name|void
+name|checkTypesOfAttributesInRelationship
+parameter_list|(
+name|DbRelationship
+name|relationship
+parameter_list|,
+name|ValidationResult
+name|validationResult
+parameter_list|)
+block|{
+for|for
+control|(
+name|DbJoin
+name|join
+range|:
+name|relationship
+operator|.
+name|getJoins
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|join
+operator|.
+name|getSource
+argument_list|()
+operator|.
+name|getType
+argument_list|()
+operator|!=
+name|join
+operator|.
+name|getTarget
+argument_list|()
+operator|.
+name|getType
+argument_list|()
+condition|)
+block|{
+name|addFailure
+argument_list|(
+name|validationResult
+argument_list|,
+name|relationship
+argument_list|,
+literal|"Attributes '%s' and '%s' have different types in a relationship '%s'"
+argument_list|,
+name|join
+operator|.
+name|getSourceName
+argument_list|()
+argument_list|,
+name|join
+operator|.
+name|getTargetName
+argument_list|()
+argument_list|,
+name|relationship
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 specifier|private
 name|void
